# material2

./: BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  package-lock.json  package.json
.github/: CODEOWNERS
scripts/caretaking/: get-merged-prs.js
src/: bazel-tsconfig-build.json
src/cdk/: BUILD.bazel  tsconfig-build.json
src/cdk-experimental/menu/: background-click-service.ts  context-menu.spec.ts  context-menu.ts  menu-bar.ts  menu-item-trigger.spec.ts  menu-item-trigger.ts  menu-item.ts  menu.ts
src/cdk/a11y/: BUILD.bazel
src/cdk/accordion/: BUILD.bazel
src/cdk/bidi/: BUILD.bazel
src/cdk/clipboard/: clipboard.spec.ts  clipboard.ts  pending-copy.ts  public-api.ts
src/cdk/coercion/: BUILD.bazel  public-api.ts  tsconfig-build.json
src/cdk/collections/: BUILD.bazel
src/cdk/drag-drop/: BUILD.bazel
src/cdk/layout/: BUILD.bazel
src/cdk/observers/: BUILD.bazel
src/cdk/overlay/: BUILD.bazel  overlay-config.ts
src/cdk/portal/: BUILD.bazel
src/cdk/scrolling/: BUILD.bazel
src/cdk/stepper/: BUILD.bazel  stepper-button.ts
src/cdk/table/: BUILD.bazel  sticky-styler.ts
src/cdk/testing/: BUILD.bazel  test-element.ts  testing.md
src/cdk/text-field/: BUILD.bazel
src/cdk/tree/: BUILD.bazel
src/components-examples/material/datepicker/date-range-picker-selection-strategy/: date-range-picker-selection-strategy-example.ts
src/dev-app/: BUILD.bazel  system-config.ts  theme.scss
src/dev-app/toolbar/: toolbar-demo-module.ts  toolbar-demo.html
src/e2e-app/: BUILD.bazel
src/google-maps/: BUILD.bazel
src/google-maps/google-map/: google-map.ts
src/google-maps/map-info-window/: map-info-window.ts
src/google-maps/map-marker/: map-marker.ts
src/google-maps/testing/: fake-google-map-utils.ts
src/lib/: BUILD.bazel
src/lib/datepicker/: datepicker.spec.ts
src/lib/select/: select.spec.ts
src/lib/stepper/: stepper-button.ts  stepper.spec.ts
src/material-experimental/mdc-chips/: chip.ts
src/material-experimental/mdc-form-field/: _mdc-text-field-structure-overrides.scss
src/material-experimental/mdc-radio/: _radio-theme.scss
src/material-experimental/mdc-select/: select.spec.ts  select.ts
src/material-experimental/mdc-slide-toggle/: _slide-toggle-theme.scss
src/material-experimental/mdc-theming/: BUILD.bazel
src/material-experimental/menubar/: menubar-item.ts  menubar.ts
src/material/chips/: chip.ts
src/material/core/common-behaviors/: tabindex.ts
src/material/core/focus-indicator/: _focus-indicator.scss
src/material/core/theming/: _all-theme.scss
src/material/datepicker/: calendar-range-selection-strategy.ts  datepicker.md
src/material/icon/: icon-registry.ts  icon.md
src/material/progress-bar/: progress-bar.ts
src/material/schematics/ng-update/test-cases/v12/misc/: theming-api-v12.spec.ts
src/material/select/: select.html  select.spec.ts  select.ts
tools/: bazel.rc
tools/package-tools/: build-package.ts
tools/triage-tracker/: .firebaserc
tools/triage-tracker/functions/src/: index.ts
