package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")

ng_module(
  name = "stepper",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/stepper",
  deps = [
    "//src/cdk/a11y",
    "//src/cdk/bidi",
    "//src/cdk/coercion",
    "//src/cdk/keycodes",
    "@rxjs",
    "@angular//packages/core",
    "@angular//packages/common",
    "@angular//packages/forms",
  ],
  tsconfig = "//src/cdk:tsconfig-build.json",
)
